--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         </p>
     </header>
     <div class = "title">
-        <h1>Hallowen</h1>
+        <h1>Halloween</h1>
         <img class="pumpkin1" src="/Halloween/Тыква.png">
     </div>
     <div class="body">
